<resources>
    <string name="app_name">محارب</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_nav_home">الرئيسية</string>
    <string name="bt_nav_videos">فيديوهات</string>
    <string name="bt_nav_emergency">طوارئ</string>
    <string name="bt_nav_habits">عادات</string>
    <string name="bt_nav_library">المكتبة</string>
    <string name="good_habit">نافعه</string>
    <string name="bad_habit">ضاره</string>
    <string name="add_new_habit">إضافة عادة جديدة</string>
    <string name="new_habit">عادة جديدة</string>
    <string name="habit_name_error_message">لايمكن ترك العادة فارغة</string>
    <string name="habit_name">إسم العادة</string>
    <string name="add">إضافة</string>
    <string name="cancel">إلغاء</string>
</resources>