<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.moataz.better_human.better_life.presentation.habits.viewmodel.HabitsViewModel" />

        <variable
            name="habitTYpe"
            type="com.moataz.better_human.better_life.core.enums.HabitType" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_50"
        tools:context=".presentation.habits.view.HabitsFragment"
        tools:ignore="RtlHardcoded">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#F8F8F8"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/app_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/almarai_bold"
                android:text="@string/bt_nav_habits"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/toolbar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/add_habit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_margin="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/circle_button_style"
                android:contentDescription="@string/add_new_habit"
                android:onClick="@{() -> viewModel.onAddHabitClick()}"
                android:padding="4dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_add" />
        </com.google.android.material.appbar.MaterialToolbar>

        <HorizontalScrollView
            android:id="@+id/horizontal_chips_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginRight="4dp"
            android:paddingHorizontal="8dp"
            android:scrollbars="none"
            app:layout_constraintTop_toBottomOf="@+id/toolbar">

            <com.google.android.material.chip.ChipGroup
                style="@style/Widget.Material3.Chip.Suggestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:selectionRequired="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:onClick="@{() -> viewModel.onChipTypeClick(habitTYpe.POSITIVE)}"
                    android:text="@string/good_habit"
                    app:chipStrokeColor="@android:color/transparent" />

                <com.google.android.material.chip.Chip
                    style="@style/ChipStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="@{() -> viewModel.onChipTypeClick(habitTYpe.NEGATIVE)}"
                    android:text="@string/bad_habit"
                    app:chipStrokeColor="@android:color/transparent" />
            </com.google.android.material.chip.ChipGroup>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/habits_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:orientation="vertical"
            android:overScrollMode="never"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_chips_scroll_view"
            tools:listitem="@layout/item_habit" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>